# CeriBot

./: .gitignore  API.py
NaoRasaASRProject/behavior_1/: behavior.xar
chatbot/: config.ini  config.yml  credentials.yml  domain.yml  graph.html  story_graph.dot
chatbot/.rasa/cache/: cache.db
chatbot/.rasa/cache/tmp03r2m3zy/: vocabularies.pkl
chatbot/.rasa/cache/tmp0upd2agp/: vocabularies.pkl
chatbot/.rasa/cache/tmp111l00_l/: DIETClassifier.data_example.pkl  DIETClassifier.index_label_id_mapping.json  DIETClassifier.sparse_feature_sizes.pkl  DIETClassifier.tf_model.index
chatbot/.rasa/cache/tmp12kvm7dq/: DIETClassifier.data_example.pkl  DIETClassifier.sparse_feature_sizes.pkl  (+1 more)
chatbot/actions/: actions.py  login_results.txt  test.py
chatbot/actions/WebPageLogin/: server.py
chatbot/actions/api/: config.ini  demo_actions.py  safeconfigparser_actions.py
chatbot/actions/apiEdt/: apiBdd.py
chatbot/actions/apiPartage/: __init__.py  demo_actions.py  safeconfigparser_actions.py
chatbot/actions/apiWeather/: apiweather.py
chatbot/data/: nlu.yml  rules.yml  stories.yml
facial-service/: docker-compose.yml
facial-service/face-recognition/: Dockerfile  main.py  pyproject.toml
facial-service/face-recognition/speech_recognition/: requirements.txt  speech_to_text.py  test.py
facial-service/get-image/: Dockerfile  facial_recognition.py  get_img.py
facial-service/get-image/db/: representations_vgg_face.pkl
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
speech-recognition/: readme.md  requirements.txt  speech-to-text-service.py  test2.py
(+257 files in other folders)
