[tool.poetry]
name = "face-recognition"
version = "0.1.0"
description = ""
authors = ["jordan"]
readme = "README.md"
packages = [{include = "face_recognition"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
requests = "^2.31.0"
uvicorn = "^0.23.2"
deepface="0.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
